Fix (?) next feed button on small screens. Let's test now..

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -88,7 +88,11 @@ $fh-hover: #1B2228;
 	}
     }
     #next {
-	top: calc(100% - 50px);
+	position: fixed;
+	margin: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
     }
 }
 
